--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsOndemand",
+  "name": "JSOnDemand",
   "version": "0.0.1",
   "homepage": "https://github.com/zigolis/jsOndemand",
   "license": "MIT",
