--- a/04/package.json
+++ b/04/package.json
@@ -5,8 +5,8 @@
   "description": "JSOnDemand examples",
   "private": false,
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-uglify": "^0.7.0"
+    "grunt": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-uglify": "*"
   }
 }
